# Lice

./: .gitignore  .gitmodules  CHANGES.md  README.md  dune-project  lice.opam  out  out.2  out.3  out.out  t
.github/workflows/: workflow.yml
doc/: README.md  dune  index.html  index.mld  playground.html  repl.mld
doc/assets/: playground.css  site.css
doc/ocaml/: dune  playground.ml
src/: .ocamlformat  dune  lice.ml  lice.mli  licec.ml
src/kernel/: dune  env.ml  env.mli  errors.ml  errors.mli  eval.ml  kernel.ml  kernel.mli  lexer.mll  lice.ml  located_error.ml  located_error.mli  parser.mly  semantic.ml  semantic.mli
src/kernel/ast/: ast.ml  dune  lnumber.ml  lstring.ml  lstring.mli  semantic.ml  tree  tree.ml  tree.mli  type.ml  type.mli  types.ml  types.mli  value.ml  value.mli
src/kernel/lvm/: Cargo.toml  dune  lib.rs
src/kernel/types/: base.ml  base.mli  dune  lbool.ml  lbool.mli  llist.ml  llist.mli  lnumber.ml  lnumber.mli  lstring.ml  lstring.mli  type.ml  type.mli  value.ml  value.mli
src/kernel/utils/: debug.ml  debug.mli  dune  formatting.ml  formatting.mli  logger.ml  logger.mli
src/kernel/vm/: dune  lvm.ml  lvm.mli  vm.ml  vm.mli
src/kernel/vm/lvm/: CMakeLists.txt  README.md  chunk.c  chunk.h  lib.c  lib.h  var.c  var.h  vm.c  vm.h
src/kernel/vm/lvm/cmake/: FindOCaml.cmake
src/lib/: dune  eval.ml  kernel.ml  kernel.mli  located_error.ml  parser.mly
src/lib/ast/: dune  lexer.mll  parser.mly  tree.ml  tree.mli
src/lib/bytecomp/: bytecode.ml  chunk.ml  chunk.mli  code.ml  code.mli  comp.ml  comp.mli  compiler.ml  compiler.mli  dune  env.ml  env.mli  opcode.ml  opcode.mli
src/lib/types/: base.ml  base.mli  dune  lbool.ml  lfunction.ml  lfunction.mli  llist.ml  llist.mli  lnumber.ml  lnumber.mli  type.ml  type.mli  value.ml  value.mli
src/lib/utils/: dune  formatting.ml
src/lib/vm/: cpu.ml  cpu.mli  dune  env.ml  env.mli  lvm.ml  lvm.mli
src/lib/vm/lvm/: CMakeLists.txt  README.md
tests/: profile.bash
tests/arithmetic/: basic.lice  nested.lice
tests/bool/: basic.lice
tests/branching/: basic.lice  random.lice
tests/compiler/: match.lice  nparams.lice  random.lice
tests/functions/: basic.lice  count_to_ten.lice  power.lice  recursive.lice
tests/lists/: basic.lice  reverse.lice
tests/modules/: basic.lice
tests/numbers/: floats.lice
tests/parser/: functions.lice  if_stmt.lice  modules.lice
tests/pattern/: deconstruct.lice  power.lice
tests/perf/: exp.lice
tests/typing/: annot.lice
