(rule
 (targets liblvm.a dlllvm.so)
 (deps
   (:cargo Cargo.toml)
   (:rs_files (glob_files *.rs)))
 (action
  (progn
   (run sh -c "cd %{project_root}/src/kernel/lvm && cargo build --release")
   (run sh -c
     "mv %{project_root}/../../target/release/liblvm.so ./dlllvm.so 2> /dev/null || \
      mv %{project_root}/../../target/release/liblvm.dylib ./dlllvm.so")
   (run mv %{project_root}/../../target/release/liblvm.a liblvm.a))))

(library
 (name lvm)
 (foreign_archives lvm)
 (c_library_flags
  (-lpthread -lc -lm)))