(data_only_dirs lvm)

(rule
 (deps
  (source_tree lvm))
 (targets liblvm.a)
 (action
  (progn
   (chdir
    lvm
    (run cmake .))
   (chdir
    lvm
    (run cmake --build . --target lvm))
   (run cp lvm/liblvm.a .))))

; Format C code with clang-format

(rule
 (deps
  (source_tree lvm))
 (mode promote)
 (alias cfmt)
 (action
  (progn
   (bash
    "for file in lvm/*.c; do clang-format -i $file; done")
   (bash
    "for file in lvm/*.h; do clang-format -i $file; done")
    )))

(library
 (name vm)
 (foreign_archives lvm)
 (wrapped false))
